# OkapiLib

./: .clang-format  .clang_complete  .codecov.yml  .gitignore  .gitmodules  .travis.yml  2dmotionprofiling_8md.html  CMakeLists.txt  CMakeLists.txt.in  CODEOWNERS  CONTRIBUTING.md  Doxyfile  Doxyfile-mcss  IMU_8cpp.html  IMU_8hpp.html  ISSUE_TEMPLATE.MD  Makefile  PULL_REQUEST_TEMPLATE.md  QAcceleration_8hpp.html  QAngle_8hpp.html  QAngularAcceleration_8hpp.html  QAngularJerk_8hpp.html  QAngularSpeed_8hpp.html  QArea_8hpp.html  QForce_8hpp.html  QFrequency_8hpp.html  QJerk_8hpp.html  QLength_8hpp.html  QMass_8hpp.html  QPressure_8hpp.html  QSpeed_8hpp.html  QTime_8hpp.html  QTorque_8hpp.html  QVolume_8hpp.html  README.md  RQuantityName_8hpp.html  RQuantity_8hpp.html  SConstruct  SECURITY.md  abstractButton_8cpp.html  (+407 more)
.d/: main.d
CMakeModules/: CodeCoverage.cmake
docs/: 404.html  index.html  index.xml  sitemap.xml
docs-dev/: README.md  config.toml
embedded_test_src/: main.cpp  unity.c
firmware/: cortex.ld  squiggles.mk
html/: 3_814_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_814_83_2CompilerIdC_2CMakeCCompilerId_8c.html  3_814_85_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  3_814_85_2CompilerIdC_2CMakeCCompilerId_8c.html  ActionSequence_8hpp.html  ActionSequence_8hpp_source.html  Action_8hpp.html  Action_8hpp_source.html  ActualInvocationHandler_8hpp.html  ActualInvocationHandler_8hpp_source.html  ActualInvocation_8hpp.html  ActualInvocation_8hpp_source.html  ActualInvocationsSource_8hpp.html  ActualInvocationsSource_8hpp_source.html  BoostTestFakeit_8hpp.html  BoostTestFakeit_8hpp_source.html  CONTRIBUTING_8md.html  CatchFakeit_8hpp.html  CatchFakeit_8hpp_source.html  CheatSheet_8md.html  CookBook_8md.html  DefaultEventFormatter_8hpp.html  DefaultEventFormatter_8hpp_source.html  DefaultEventLogger_8hpp.html  DefaultEventLogger_8hpp_source.html  DefaultFakeit_8hpp.html  DefaultFakeit_8hpp_source.html  DefaultValue_8hpp.html  DefaultValue_8hpp_source.html  DesignDoc_8md.html  Destructible_8hpp.html  Destructible_8hpp_source.html  Documentation_8md.html  DomainObjects_8hpp.html  DomainObjects_8hpp_source.html  DynamicProxy_8hpp.html  DynamicProxy_8hpp_source.html  EventFormatter_8hpp.html  EventFormatter_8hpp_source.html  EventHandler_8hpp.html  (+4083 more)
include/: API.h  api.h  main.h
latex/: 3_814_83_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  3_814_83_2CompilerIdC_2CMakeCCompilerId_8c.tex  3_814_85_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.tex  3_814_85_2CompilerIdC_2CMakeCCompilerId_8c.tex  ActionSequence_8hpp.tex  Action_8hpp.tex  ActualInvocationHandler_8hpp.tex  ActualInvocation_8hpp.tex  ActualInvocationsSource_8hpp.tex  BoostTestFakeit_8hpp.tex  CONTRIBUTING_8md.tex  CatchFakeit_8hpp.tex  CheatSheet_8md.tex  CookBook_8md.tex  DefaultEventFormatter_8hpp.tex  DefaultEventLogger_8hpp.tex  DefaultFakeit_8hpp.tex  DefaultValue_8hpp.tex  DesignDoc_8md.tex  Destructible_8hpp.tex  Documentation_8md.tex  DomainObjects_8hpp.tex  DynamicProxy_8hpp.tex  EventFormatter_8hpp.tex  EventHandler_8hpp.tex  FakeFunctor_8hpp.tex  FakeObject_8hpp.tex  FakeitContext_8hpp.tex  FakeitEvents_8hpp.tex  FakeitExceptions_8hpp.tex  Finally_8hpp.tex  ForDummies_8md.tex  Formatter_8hpp.tex  FrequentlyAskedQuestions_8md.tex  Functional_8hpp.tex  GTestFakeit_8hpp.tex  Home_8md.tex  Invocation_8hpp.tex  KnownIssues_8md.tex  Macros_8hpp.tex  (+2769 more)
okapilib-template/: template.pros
pathfinder/: generator.c  io.c  mathutil.c  spline.c
src/: Makefile  abstractMotor.cpp  adiButton.cpp  adiEncoder.cpp  adiMotor.cpp  adiUltrasonic.cpp  asyncController.cpp  asyncPosIntegratedController.cpp  asyncPosPidController.cpp  asyncVelIntegratedController.cpp  auto.cpp  autonomous.cpp  averageFilter.cpp  button.cpp  chassisController.cpp  chassisControllerIntegrated.cpp  chassisControllerPid.cpp  chassisModel.cpp  composableFilter.cpp  controller.cpp  controllerButton.cpp  demaFilter.cpp  duration.cpp  ekfFilter.cpp  emaFilter.cpp  filter.cpp  flywheelSimulator.cpp  init.cpp  initialize.cpp  integratedController.cpp  integratedEncoder.cpp  iterativeController.cpp  iterativeMotorController.cpp  iterativePosPidController.cpp  iterativeVelPidController.cpp  main.cpp  motor.cpp  motorController.cpp  motorGroup.cpp  nsPid.cpp  (+27 more)
test/: asyncLinearMotionProfileControllerTests.cpp  asyncMotionProfileControllerTests.cpp  asyncPosIntegratedControllerTests.cpp  asyncPosPIDControllerTests.cpp  asyncVelIntegratedControllerTests.cpp  asyncVelPIDControllerTests.cpp  asyncWrapperTests.cpp  buttonTests.cpp  chassisControllerIntegratedTests.cpp  chassisControllerPidIntegrationTest.cpp  chassisControllerPidTest.cpp  chassisControllerTests.cpp  chassisModelTests.cpp  chassisScalesTests.cpp  controlTests.cpp  controllerTests.cpp  crossPlatformTestRunner.cpp  defaultOdomChassisControllerTest.cpp  filterTests.cpp  hDriveModelTests.cpp  implMocks.cpp  iterativeMotorVelocityControllerTest.cpp  iterativePosPIDControllerTests.cpp  iterativeVelPIDControllerTests.cpp  leftFile.csv  loggerTests.cpp  odomChassisControllerIntegratedTest.cpp  odomChassisControllerPidTest.cpp  odomChassisControllerTests.cpp  odomMathTests.cpp  odometryTests.cpp  offsettableControllerInputTests.cpp  rightFile.csv  skidSteerModelTests.cpp  testMain.cpp  threadedMockMotorTest.cpp  threeEncoderOdometryTests.cpp  threeEncoderSkidSteerModelTests.cpp  threeEncoderXDriveModelTests.cpp  twoEncoderOdometryTests.cpp  (+3 more)
xml/: CONTRIBUTING_8md.xml  PULL__REQUEST__TEMPLATE_8md.xml  QAcceleration_8hpp.xml  QAngle_8hpp.xml  QAngularAcceleration_8hpp.xml  QAngularJerk_8hpp.xml  QAngularSpeed_8hpp.xml  QArea_8hpp.xml  QForce_8hpp.xml  QFrequency_8hpp.xml  QJerk_8hpp.xml  QLength_8hpp.xml  QMass_8hpp.xml  QPressure_8hpp.xml  QSpeed_8hpp.xml  QTime_8hpp.xml  QTorque_8hpp.xml  QVolume_8hpp.xml  README_8md.xml  RQuantity_8hpp.xml  Tutorial1_8md.xml  abstractButton_8cpp.xml  abstractButton_8hpp.xml  abstractMotor_8cpp.xml  abstractMotor_8hpp.xml  abstractRate_8cpp.xml  abstractRate_8hpp.xml  abstractTimer_8cpp.xml  abstractTimer_8hpp.xml  adiButton_8cpp.xml  adiButton_8hpp.xml  api_8hpp.xml  (+325 more)
(+1800 files in other folders)
